Refactored getTopGenres method implementation in SpotifyAPIService, modified .gitignore file